--- a/UGolf/UGolf/Views/StoryBoards/Base.lproj/Main.storyboard
+++ b/UGolf/UGolf/Views/StoryBoards/Base.lproj/Main.storyboard
@@ -1,24 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KJU-sA-C3f">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Tab Bar Controller-->
+        <scene sceneID="6kq-WO-48w">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tabBarController id="KJU-sA-C3f" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2oT-SX-TUg">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="fur-KK-yPS" kind="relationship" relationship="viewControllers" id="5Hf-XP-kBe"/>
+                        <segue destination="d8e-94-LIg" kind="relationship" relationship="viewControllers" id="Knw-4a-Wf9"/>
+                        <segue destination="KR3-UI-e0C" kind="relationship" relationship="viewControllers" id="BI3-lX-fnj"/>
+                        <segue destination="DYY-Ma-jvS" kind="relationship" relationship="viewControllers" id="QqM-J2-8CW"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MFW-He-XdM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-3452" y="-5"/>
+        </scene>
+        <!--Home-->
+        <scene sceneID="FHJ-ds-696">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Home" id="fur-KK-yPS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Xv9-gv-64Z"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yD7-hL-xK9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2152" y="-386"/>
+        </scene>
+        <!--Game-->
+        <scene sceneID="K6u-bO-de8">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Game" id="d8e-94-LIg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="nWD-Ea-5ie"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sbW-os-JZl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2151" y="-188"/>
+        </scene>
+        <!--Golfmap-->
+        <scene sceneID="rvf-lt-jmX">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Golfmap" id="KR3-UI-e0C" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="eHS-6p-qzl"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pzX-Mu-sYQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2139" y="-5"/>
+        </scene>
+        <!--Messaging-->
+        <scene sceneID="2dv-NY-OzS">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Messaging" id="DYY-Ma-jvS" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="TSY-AZ-DWm"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4eH-Oe-KnM" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2130" y="187"/>
         </scene>
     </scenes>
 </document>
